--- a/ToDo_app/app/views/todos/index.html.erb
+++ b/ToDo_app/app/views/todos/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing to-do items</h1>
 
-<table>
+<table cellspacing="5" cellpadding="5">
   <thead>
     <tr>
       <th>Title</th>
@@ -18,9 +18,9 @@
         <td><%= todo.notes %></td>
         <td><%= todo.due %></td>
         <td><%= todo.done %></td>
-        <td><%= link_to 'Show', todo %></td>
-        <td><%= link_to 'Edit', edit_todo_path(todo) %></td>
-        <td><%= link_to 'Destroy', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Display', todo %></td>
+        <td><%= link_to 'Update', edit_todo_path(todo) %></td>
+        <td><%= link_to 'Delete', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
