--- a/ToDo_app/app/views/todos/index.html.erb
+++ b/ToDo_app/app/views/todos/index.html.erb
@@ -1,31 +1,34 @@
-<h1>Listing to-do items</h1>
-
-<table cellspacing="5" cellpadding="5">
+<table align="center" border="0" width="900" cellspacing="0" cellpadding="3">
+<tr><td>
+  
+<h1 align="center">Listing to-do items</h1>
+  <center><%= link_to 'Create To-Do Item', new_todo_path %></center>
+  
+<table cellspacing="5" cellpadding="5" border="0">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Notes</th>
-      <th>Due</th>
-      <th>Done</th>
-      <th colspan="3"></th>
+      <th align="left">Title</th>
+      <th align="left">Notes</th>
+      <th align="left">Due</th>
+      <th align="left">Done</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @todos.each do |todo| %>
       <tr>
-        <td><%= todo.title %></td>
-        <td><%= todo.notes %></td>
-        <td><%= todo.due %></td>
-        <td><%= todo.done %></td>
-        <td><%= link_to 'Display', todo %></td>
-        <td><%= link_to 'Update', edit_todo_path(todo) %></td>
-        <td><%= link_to 'Delete', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td valign="top" width="150"><%= todo.title %></td>
+        <td valign="top"><%= todo.notes %></td>
+        <td valign="top" width="100"><%= todo.due %></td>
+        <td valign="top"><%= todo.done %></td>
+        <td valign="top"><%= link_to 'View', todo %></td>
+        <td valign="top"><%= link_to 'Edit', edit_todo_path(todo) %></td>
+        <td valign="top"><%= link_to 'Delete', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Todo', new_todo_path %>
+  </td></tr>
+</table>
