--- a/hello/app/views/pages/home.html.erb
+++ b/hello/app/views/pages/home.html.erb
@@ -2,10 +2,14 @@
 
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<p><b>Yo!</b></p>
-
 <p>Today is <%= Date.today %>.</p>
 
 <p>We are this many days into the week: <%= Date.today.wday %>. Only <%= 7 - Date.today.wday %> to go!</p>
 
+<hr>
+
 <p>My name is <b><%= @Home.name %></b> and my birthdate is <b><%= @Home.birthdate %></b>.</p>
+
+<p>This makes me <b><%= @Home.age %> years old</b> and there are <%= @Home.days_until_bday %> days until my next birthday.</p>
+
+
