--- a/ProjTracker/app/views/projects/_form.html.erb
+++ b/ProjTracker/app/views/projects/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :manager %><br>
     <%= f.text_field :manager %>
   </div>
+  <div class="field">
+    <%= f.label :link %><br>
+    <%= f.text_field :link %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
