--- a/ProjTracker/app/views/projects/index.html.erb
+++ b/ProjTracker/app/views/projects/index.html.erb
@@ -7,6 +7,7 @@
       <th>Description</th>
       <th>Status</th>
       <th>Manager</th>
+      <th>Link</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= project.description %></td>
         <td><%= project.status %></td>
         <td><%= project.manager %></td>
+        <td><a href=<%= project.link %>><%= project.link %></a></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
