--- a/ProjTracker/app/views/projects/show.html.erb
+++ b/ProjTracker/app/views/projects/show.html.erb
@@ -20,5 +20,10 @@
   <%= @project.manager %>
 </p>
 
+<p>
+  <strong>Link:</strong>
+  <%= @project.link %>
+</p>
+
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
