Added Bootstrap to Music_DB and made some CSS changes

--- a/Music_DB/app/assets/stylesheets/application.css
+++ b/Music_DB/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+.btn-primary {
+  background: #660000;
+  border: #660000;
+}
+
+.btn-primary:hover {
+  background: #990000;
+  border: #990000;
+}
