--- a/Music_DB/app/views/pages/home.html.erb
+++ b/Music_DB/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
   <h1>Welcome to the Music DB</h1>
-  <p>I can has songz & more.</p>
+  <p>I can has songz and more.</p>
   <p><a class="btn btn-primary btn-lg" href="/songs" role="button">Get Started</a></p>
 </div>
