Minor addition to a button

--- a/Music_DB/app/views/songs/index.html.erb
+++ b/Music_DB/app/views/songs/index.html.erb
@@ -1,5 +1,5 @@
 <h1>&nbsp;Songs</h1>
-<p>&nbsp;&nbsp;<%= link_to 'New Song', new_song_path, :class => "label label-success" %></p>
+<p>&nbsp;&nbsp;<%= link_to '+ New Song', new_song_path, :class => "label label-success" %></p>
 <br>
 
 <div class="row">
