--- a/RailsU/app/views/departments/index.html.erb
+++ b/RailsU/app/views/departments/index.html.erb
@@ -1,6 +1,12 @@
-<h1>Listing departments</h1>
+<h1>Departments</h1>
+<br>
+<%= link_to 'New Department', new_department_path, :class => "btn-primary btn-sm" %>
+<br><br>
+<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Panel heading</div>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -18,14 +24,12 @@
         <td><%= department.budget %></td>
         <td><%= department.start_date %></td>
         <td><%= department.instructor.first_name %> <%= department.instructor.last_name %></td>
-        <td><%= link_to 'Show', department %></td>
-        <td><%= link_to 'Edit', edit_department_path(department) %></td>
-        <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', department, :class => "label label-primary" %></td>
+        <td><%= link_to 'Edit', edit_department_path(department), :class => "label label-primary" %></td>
+        <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' }, :class => "label label-danger" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Department', new_department_path %>
+</div>
