--- a/RailsU/app/views/students/index.html.erb
+++ b/RailsU/app/views/students/index.html.erb
@@ -1,6 +1,12 @@
-<h1>Listing students</h1>
+<h1>Students</h1>
+<br>
+<%= link_to 'New Student', new_student_path, :class => "btn-primary btn-sm" %>
+<br><br>
+<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Panel heading</div>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Last name</th>
@@ -16,14 +22,12 @@
         <td><%= student.last_name %></td>
         <td><%= student.first_name %></td>
         <td><%= student.enrollment_date %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', student, :class => "label label-primary" %></td>
+        <td><%= link_to 'Edit', edit_student_path(student), :class => "label label-primary" %></td>
+        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, :class => "label label-danger" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Student', new_student_path %>
+</div>
