Removed retweet code since it throws an error on 2nd RT request for same tweet

--- a/TwitterTest/app/views/tweets/profile.html.erb
+++ b/TwitterTest/app/views/tweets/profile.html.erb
@@ -11,4 +11,4 @@
   <%= current_user.retweeters(553285289779953665) %></p>
 
 <p>Retweet a tweet using the tweet's ID<br>
-  <%= current_user.retweet(565338802974392321) %></p>
+   current_user.retweet(565338802974392321)</p> <!-- Throws an error for tweets that I have already retweeted -->
