Only commit after a night of spinning my wheels.

--- a/TwitterTest/app/views/tweets/profile.html.erb
+++ b/TwitterTest/app/views/tweets/profile.html.erb
@@ -12,3 +12,6 @@
 
 <p>Retweet a tweet using the tweet's ID<br>
    current_user.retweet(565338802974392321)</p> <!-- Throws an error for tweets that I have already retweeted -->
+
+
+<!-- Next step: I need to simplify this app and organize it now that I better understand app structure. -->
