Finished my Hello World test of the Prawn gem.

--- a/PDFtestPrawn/app/views/pages/home.html.erb
+++ b/PDFtestPrawn/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Prawn gem test</h1>
+<p>Check the controller. This page view created a PDF.</p>
 
-I manually created the <a href="/pages/home.pdf">link to the PDF</a>
+Here's a <a href="/pdfs/helloworld.pdf">link to the PDF</a>.
