Added a student attribute to the Show view for grade assignment as a test.

--- a/GradeLoader/app/views/assignment_grades/show.html.erb
+++ b/GradeLoader/app/views/assignment_grades/show.html.erb
@@ -21,6 +21,11 @@
 </p>
 
 <p>
+  <strong>Student Major:</strong>
+  <%= @assignment_grade.student.major %>
+</p>
+
+<p>
   <strong>Course:</strong>
   <%= @assignment_grade.course.name %>
 </p>
