--- a/TwitterTest/app/views/home/show.html.erb
+++ b/TwitterTest/app/views/home/show.html.erb
@@ -4,7 +4,8 @@
 
     <!-- Just a static link to a page where I'm playing with profile stuff -->
     <p><a href="tweets/profile.html">Profile examples</a></p>
-    <p><a href="timeline/lookup.html">Timeline work.</a></p>
+    <p><a href="timeline/lookup.html">Timeline work</a></p>
+    <p><a href="search/keywords.html">Search work</a></p>
 <% else %>
     <p>You must log in to send a tweet.</p>
 <% end %>
