--- a/bookstore/app/views/layouts/application.html.erb
+++ b/bookstore/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <p class="notice"<%= notice %></p>
+  <p class="alert"<%= alert %></p>
+
+  <% if student_signed_in? %>
+    Signed in as <%= current_student.email %>. Not you?
+    <%= link_to "Sign out", destroy_student_session_path, :method => :delete %>
+  <% else %>
+    <%= link_to "Sign Up", new_student_registration_path %>
+  <% end %>
 
 <%= yield %>
 
