--- a/TwitterTest/app/views/timeline/lookup.html.erb
+++ b/TwitterTest/app/views/timeline/lookup.html.erb
@@ -1,14 +1,3 @@
-<p>Profile<br>
-<%# @profile %></p>
-
-<p>Profile timeline<br>
-<%# @profile_timeline %></p>
-
-<p>Tweet<br>
-<%# @tweet %></p>
-
------------
-  
 <p>Profile ID<br>
 <%= @id %></p>
 
@@ -16,7 +5,10 @@
 <%= @desc %></p>
 
 <p>Profile timeline<br>
-<%# @timeline %></p>
+<%= @tweets %></p>
+
+<p>Profile followers<br>
+<%= @followers %></p>
 
 <%# current_user.user_timeline("FAIL").each do |tweet| %>
     <%# puts tweet %>
