--- a/bookstore/app/views/cart_items/index.html.erb
+++ b/bookstore/app/views/cart_items/index.html.erb
@@ -4,9 +4,9 @@
   <thead>
     <tr>
       <th>Quantity</th>
-      <th>Student</th>
-      <th>Book</th>
-      <th colspan="3"></th>
+      <th>Item</th>
+      <th>Total</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -14,11 +14,10 @@
     <% @cart_items.each do |cart_item| %>
       <tr>
         <td><%= cart_item.quantity %></td>
-        <td><%= cart_item.student %></td>
-        <td><%= cart_item.book %></td>
-        <td><%= link_to 'Show', cart_item %></td>
+        <td><%= cart_item.book.title %></td>
+        <td>$<%= cart_item.linetotal %></td>
         <td><%= link_to 'Edit', edit_cart_item_path(cart_item) %></td>
-        <td><%= link_to 'Destroy', cart_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Remove from cart', cart_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +25,5 @@
 
 <br>
 
-<%= link_to 'New Cart item', new_cart_item_path %>
+<h2>Checkout</h2>
+the magic goes here...
